--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "build-dev": "browserify ./demo/index.js | uglifyjs -cm > ./demo/bundle.min.js"
   },
   "dependencies": {
-    "react": ">=0.12.0",
-    "swipe-js-iso": ">=2.0.0"
+    "react": "~0.12.0",
+    "swipe-js-iso": "^2.0.0"
   },
   "peerDependencies": {
-    "react": ">=0.12.0",
-    "swipe-js-iso": ">=2.0.0"
+    "react": "~0.12.0",
+    "swipe-js-iso": "^2.0.0"
   }
 }
